# CruxLang

./: .gitignore  Cargo.toml  README.md  index.html
backend/: Cargo.toml  package-lock.json  package.json  test.crx
backend/src/: ast.rs  bytecode.rs  bytecode_gen.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  test_compiler.rs  token.rs  value.rs  vm.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  Playground.tsx
