[package]
name = "cruxlang"
version = "0.1.0"
edition = "2021"
default-run = "cruxlang"

[[bin]]
name = "cruxlang"
path = "src/main.rs"

[[bin]]
name = "test_compiler"
path = "src/test_compiler.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
bincode = "1.3"
serde_derive = "1.0"
